Reparado y primera parte de ejercicio realizado